--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "caniuse-lite": "^1.0.30001006",
     "ibmcloud-appid": "^6.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
