--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.2",
     "bootstrap": "^4.3.1",
     "caniuse-lite": "^1.0.30001006",
     "ibmcloud-appid": "^6.0.1",
