--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "caniuse-lite": "^1.0.30001006",
+    "cloudant": "^1.10.0-NOTICE",
+    "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
     "ibmcloud-appid": "^6.0.1",
+    "js-base64": "^2.5.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
@@ -35,6 +40,6 @@
     ]
   },
   "devDependencies": {
-    "twilio": "^3.37.0"
+    "twilio": "^2.11.1"
   }
 }
