--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudant/cloudant": "^4.2.2",
     "@material-ui/core": "^4.5.2",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "caniuse-lite": "^1.0.30001006",
     "cloudant": "^1.10.0-NOTICE",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-pino-logger": "^4.0.0",
     "ibmcloud-appid": "^6.0.1",
